--- a/src/components/css/ArticlePreview.css
+++ b/src/components/css/ArticlePreview.css
@@ -28,8 +28,13 @@ header,
     margin-bottom: var(--space-150);
 }
 
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .article-preview__category {
-    max-width: 5.125rem;
     text-align: center;
     font-size: var(--fs-small);
     font-weight: 800;
